--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "format": "prettier --write \"./**/*.{js,jsx,json,ts,tsx}\"",
+    "lint": "tsc --noEmit && eslint '*/**/*.{js,ts,tsx}' --quiet",
+    "test": "npm run lint",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -37,6 +39,8 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-plugin-react": "^7.18.0",
     "prettier": "1.19.1"
   }
 }
